@@ -1,3 +1,10 @@
+2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* include/functions_modules.php,
+	include/functions_agents.php,
+	operation/tree.php: Improved performance for
+	tree view module tab.
+
 2012-06-11  Vanessa Gil <vanessa.gil@artica.es>
 
 	* godmode/users/configure_user.php: Removed 'add extra policies'.
